# OispaHallaAnalytics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  fly.toml  sqlx-data.json
.sqlx/: query-3dbac4990ea67e7214a29550d95a1b71f970f328001c7ea78027c536b2d7f98b.json  query-3e5690b2ebc0926081f38bbedcb12180dbd1eb34db49bbaa930ada414ed4f441.json  query-81ff4720105579e4b0c4ee7c792f3ad592a4ee476b57698edd26a59f94485223.json  query-bb389e9c04e74a467fd5b093455e19b73436a485b546261af2761ff890ff2b1e.json  query-e2c78b0f6c5ec7ca53fd019992b54a4f26afd9cd971c63c20c50c61cb42678b5.json
analyzer/: analyzer.py  converter.py  download_data.sh  final.R  process.sh
analyzer_rs/: .gitignore  Cargo.toml  README.md  download_data.sh  download_data.ts  final.R  process.sh  runme.sh  shell.sh
analyzer_rs/migrations/: 2022062504490000_analytics.sql  20230903222637_moves.sql  20230903223905_validation.sql
analyzer_rs/src/: analyzer.rs  filter.rs  io.rs  libproxy.rs  main.rs
db/: .gitignore  template.db
migrations/: 2022062504490000_analytics.sql  20231007225759_analytics.down.sql  20231007225759_analytics.up.sql  20231103085750_remove_ids.down.sql  20231103085750_remove_ids.up.sql
src/: main.rs  server.rs
src/server/: api.rs  db.rs
src/server/api/: input_types.rs  internal_types.rs  response_types.rs
