[package]
name = "oispa_halla_analytics"
version = "0.3.0"
edition = "2021"
authors = ["Elias Eskelinen <elias.eskelinen@pm.me>"]
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.5", features = [ "git2" ] }

[dependencies]
twothousand-forty-eight = { version="0.3", default-features = false, features = ["serde_derive", "history_hash", "tile_id"] }

poem = { version= "1.3", features = ["rustls"], optional = true }
poem-openapi = { version="1.3", features = ["swagger-ui"], optional = true }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tracing-subscriber = { version ="0.3", features = ["env-filter"], optional = true }
async-stream = { version = "0.3", optional = true }

sqlx = { version = "0.6", optional = true, features = ["runtime-tokio-rustls", "sqlite"] }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["server"]
server = ["poem", "poem-openapi", "serde", "serde_json", "tokio", "tracing-subscriber", "async-stream", "sqlx"]

[profile.release]
lto = true