[package]
name = "analyzer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
array_tool = "1.0"
csv = "1.1"
twothousand-forty-eight = { path = "../twothousand-forty-eight", default_features = false, features = ["tile_id", "serde_derive"] }
oispa_halla_analytics = { path = ".." }