[package]
name = "analyzer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
array_tool = "1.0"
csv = "1.1"
twothousand-forty-eight = "0.22.1"
rayon = "1.7.0"
memoize = "0.4.0"
thiserror = "1.0.43"
base64 = "0.21.2"
convert-base = "1.1.2"
anyhow = "1.0.72"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
tokio-retry = "0.3.0"
futures = "0.3.28"
dotenv = "0.15.0"
